--- a/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
+++ b/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
@@ -58,19 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(ℋ(cavity) ⊗ ℋ(atom), :j, N, 2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Hilbert space\n",
     "hc = FockSpace(:cavity)\n",
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,28 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{align}\n",
-       "\\frac{d}{dt} \\langle a\\rangle  =& -1 i \\left( \\eta + \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle {\\sigma}_{i}^{{12}}\\rangle  \\right) -1 i \\langle a\\rangle  {\\Delta}c -0.5 \\langle a\\rangle  \\kappa \\\\\n",
-       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{12}}\\rangle  =& -0.5 \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{22}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} + 2 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{22}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1 i {g}_{k} \\langle a\\rangle  -0.5 \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Gamma}_{k,k} -1 i \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Delta}a + 2 i {g}_{k} \\langle {\\sigma}_{k}^{{22}}\\rangle  \\langle a\\rangle  \\\\\n",
-       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{22}}\\rangle  =& -0.5 \\left( \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Gamma}_{i,k} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} \\right) + 1 i \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Omega}_{i,k} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1.0 \\langle {\\sigma}_{k}^{{22}}\\rangle  {\\Gamma}_{k,k} -1 i {g}_{k} \\langle {\\sigma}_{k}^{{21}}\\rangle  \\langle a\\rangle  + 1 i {g}_{k} \\langle a^\\dagger\\rangle  \\langle {\\sigma}_{k}^{{12}}\\rangle \n",
-       "\\end{align}\n"
-      ],
-      "text/plain": [
-       "∂ₜ(⟨a⟩) = (0 - 1im)*(η + var\"∑(i=1:N)gi*⟨σ12i⟩\") + (0 - 1im)*⟨a⟩*Δc - 0.5⟨a⟩*κ\n",
-       "∂ₜ(⟨σ12k⟩) = -0.5var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*Γkj\" + var\"∑(j=1:N)(j≠i,k)⟨σ22k⟩*⟨σ12j⟩*Γkj\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*Ωkj\" + (0 + 2im)*var\"∑(j=1:N)(j≠k)⟨σ22k⟩*⟨σ12j⟩*Ωkj\" + (0 - 1im)*gk*⟨a⟩ - 0.5⟨σ12k⟩*Γkk + (0 - 1im)*⟨σ12k⟩*Δa + (0 + 2im)*gk*⟨σ22k⟩*⟨a⟩\n",
-       "∂ₜ(⟨σ22k⟩) = -0.5(var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Γik\" + var\"∑(j=1:N)(j≠i,k)⟨σ21k⟩*⟨σ12j⟩*Γkj\") + (0 + 1im)*var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Ωik\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ21k⟩*⟨σ12j⟩*Ωkj\" - ⟨σ22k⟩*Γkk + (0 - 1im)*gk*⟨σ21k⟩*⟨a⟩ + (0 + 1im)*gk*⟨a′⟩*⟨σ12k⟩\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eqs = meanfield(a,H,J;rates=rates,order=1)\n",
     "complete!(eqs)"
@@ -186,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +219,7 @@
     "n_ls = zeros(length(Δ_ls))\n",
     "\n",
     "# definitions for fast replacement of numerical parameter \n",
-    "prob = ODEProblem(sys,u0,(0.0, 20Γ_), ps.=>p0)\n",
+    "prob = ODEProblem(sys,u0,(0.0, 20), ps.=>p0)\n",
     "prob_ss = SteadyStateProblem(prob)\n",
     "\n",
     "for i=1:length(Δ_ls)\n",
@@ -256,10 +227,9 @@
     "    Δa_ = Δc_ + Ωij(1,2) # cavity on resonace with the shifted collective emitter\n",
     "    p0_ = [Δc_; η_; Δa_; κ_; gi_; Γij_; Ωij_]\n",
     "    \n",
-    "    # create new ODEProblem\n",
-    "    prob_ss_ = remake(prob_ss, p=(ps.=>p0_) )\n",
-    "    sol_ss = solve(prob_ss_, DynamicSS(Tsit5(); abstol=1e-6, reltol=1e-6),\n",
-    "        reltol=1e-12, abstol=1e-12, maxiters=1e7)\n",
+    "    # create (remake) new SteadyStateProblem\n",
+    "    prob_ss_ = SteadyStateProblem(sys,u0,ps.=>p0_)\n",
+    "    sol_ss = solve(prob_ss_, SSRootfind())\n",
     "    n_ls[i] = abs2(sol_ss[a])\n",
     "end"
    ]
@@ -273,20 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/cavity_antiresonance_indexed.svg\""
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "T = n_ls ./ maximum(n_ls)\n",
     "plot(Δ_ls, T, xlabel=\"Δ/Γ\", ylabel=\"T\", legend=false)\n",
